<resources>
    <string name="app_name">Calculator23rdJune</string>
    <string name="key_1">1</string>
    <string name="key_zero">0</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_plus">+</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_minus">-</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_mult">*</string>
    <string name="key_dot">.</string>
    <string name="key_div">/</string>
    <string name="theme_1">Theme 1</string>
    <string name="theme_2">Theme 2</string>
    <string name="theme_3">Theme 3</string>
    <string name="select_theme">Select Theme</string>
    <string name="how_to">How To</string>
</resources>