<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:padding="@dimen/default_padding"
        tools:context=".ui.CalculatorActivity">

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/result_size"
            android:gravity="end"
            android:textColor="?attr/colorSecondary"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:paddingVertical="@dimen/default_padding"
            tools:text="433" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_1"
            app:cornerRadius="24dp"
            app:rippleColor="@color/teal_200" />

        <Button
            android:id="@+id/key_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_2" />


        <Button
            android:id="@+id/key_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_3" />


        <Button
            android:id="@+id/key_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_plus"
            style="?attr/calcActionButton" />


        <Button
            android:id="@+id/key_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_4" />


        <Button
            android:id="@+id/key_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_5" />


        <Button
            android:id="@+id/key_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_6" />


        <Button
            android:id="@+id/key_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_minus"
            style="?attr/calcActionButton" />


        <Button
            android:id="@+id/key_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_7" />


        <Button
            android:id="@+id/key_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_8" />


        <Button
            android:id="@+id/key_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_9" />


        <Button
            android:id="@+id/key_mult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_mult"
            style="?attr/calcActionButton" />


        <Button
            android:id="@+id/key_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_zero"
            android:layout_columnSpan="2" />


        <Button
            android:id="@+id/key_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_dot" />


        <Button
            android:id="@+id/key_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_div"
            style="?attr/calcActionButton" />


    </GridLayout>

    <Button
        android:id="@+id/theme1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_1" />

    <Button
        android:id="@+id/theme2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_2" />


    <Button
        android:id="@+id/theme3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme_3" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>